--- a/app/src/main/res/drawable/post_view_title_under_edge_1dp.xml
+++ b/app/src/main/res/drawable/post_view_title_under_edge_1dp.xml
@@ -8,7 +8,7 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="0.5dp"
-                android:color="@color/Theme_Less_Accent_Color">
+                android:color="@color/Btn_Off_Color">
             </stroke>
             <solid android:color="@android:color/transparent"></solid>
         </shape>
