--- a/app/src/main/res/drawable/round_shape_off.xml
+++ b/app/src/main/res/drawable/round_shape_off.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/Theme_Color"/>
     <corners
         android:topLeftRadius="15dp"
         android:topRightRadius="15dp"
@@ -8,6 +8,6 @@
         android:bottomRightRadius="15dp"/>
     <stroke
         android:width="1dp"
-        android:color="@color/Transparent_Black50">
+        android:color="@color/Theme_Text_Color">
     </stroke>
 </shape>
