--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -10,39 +10,40 @@
     </data>
 <LinearLayout
     tools:context="com.bigjeon.grumbling.Chatting_Activity"
+    android:background="@color/Theme_Color"
     android:orientation="vertical"
-    android:background="@drawable/selected__post_view_activity_background_img"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
         <RelativeLayout
-            android:layout_weight="12"
-            android:background="@color/Transparent_Black30"
             android:id="@+id/Post_View_Content_Container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/Chat_ET_Color"
+            android:padding="6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
             <ImageView
                 android:id="@+id/BackPress_Btn"
+                android:backgroundTint="@color/Theme_Text_Color"
                 android:background="@drawable/ic_baseline_navigate_before_24"
                 android:layout_centerInParent="true"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </ImageView>
             <TextView
                 android:id="@+id/Chatting_Post_Content_TV"
                 android:text="포스팅 내용"
-                android:textSize="15dp"
+                android:textSize="18dp"
                 android:layout_toRightOf="@id/BackPress_Btn"
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:textColor="@color/black"
+                android:textColor="@color/Theme_Text_Color"
                 android:gravity="left"
-                android:textStyle="bold"
-                android:layout_marginLeft="10dp"
+                android:includeFontPadding="false"
+                android:fontFamily="@font/notosans_medium"
+                android:layout_marginLeft="6dp"
                 android:layout_centerInParent="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -50,6 +51,7 @@
             </RelativeLayout>
     <RelativeLayout
         android:layout_weight="2"
+        android:background="@color/Chat_Room_Color"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
@@ -67,21 +69,26 @@
         <RelativeLayout
             android:id="@+id/Replided_Edit_Container"
             android:visibility="gone"
-            android:background="@color/Transparent_Black30"
+            android:background="@color/Theme_Color"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="70dp">
             <RelativeLayout
                 android:id="@+id/Replide_Target_Name_Container"
                 android:background="@drawable/post_view_title_under_edge_1dp"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="6dp"
+                android:paddingTop="2dp"
+                android:gravity="center_vertical"
                 android:layout_width="match_parent"
                 android:layout_height="30dp">
                 <TextView
                     android:id="@+id/Replied_Target_Name"
-                    android:textSize="15dp"
+                    android:textSize="14dp"
                     android:hint="이름"
-                    android:textColor="@color/black"
+                    android:fontFamily="@font/notosans_regular"
+                    android:includeFontPadding="false"
+                    android:textColor="@color/Theme_Text_Color"
                     android:layout_centerInParent="true"
                     android:layout_alignParentLeft="true"
                     android:layout_width="wrap_content"
@@ -89,13 +96,18 @@
                 </TextView>
             </RelativeLayout>
             <RelativeLayout
-                android:layout_margin="5dp"
+                android:layout_margin="6dp"
                 android:layout_below="@id/Replide_Target_Name_Container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/Replied_Text"
-                    android:textColor="@color/black"
+                    android:fontFamily="@font/notosans_regular"
+                    android:textSize="12dp"
+                    android:includeFontPadding="false"
+                    android:layout_centerInParent="true"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/Theme_Less_Accent_Color"
                     android:text="답장 대상 내용"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -104,47 +116,55 @@
         </RelativeLayout>
     </RelativeLayout>
     <RelativeLayout
-        android:layout_weight="11.5"
-        android:background="@color/Transparent_Black30"
+        android:background="@color/Chat_ET_Color"
         android:id="@+id/Chatting_Edittext_Container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <RelativeLayout
-            android:layout_margin="10dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/Chatting_Send_CIV"
                 android:layout_centerInParent="true"
                 android:layout_alignParentRight="true"
-                android:src="@drawable/ic_baseline_send_24"
-                android:layout_width="30dp"
-                android:layout_height="30dp">
+                android:backgroundTint="@color/Theme_Text_Color"
+                android:background="@drawable/ic_baseline_send_24"
+                android:layout_width="25dp"
+                android:layout_height="25dp">
             </de.hdodenhof.circleimageview.CircleImageView>
+
             <ImageView
                 android:id="@+id/Reply_Img"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="6dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/ic_baseline_reply_24"
+                android:backgroundTint="@color/Theme_Text_Color"
                 android:rotationX="180"
-                android:rotationY="180"></ImageView>
+                android:rotationY="180"
+                android:visibility="gone"></ImageView>
             <EditText
                 android:id="@+id/Chatting_ETV"
-                android:background="@drawable/round_shape_off"
                 android:layout_toLeftOf="@id/Chatting_Send_CIV"
                 android:hint="내용을 입력하세요."
                 android:layout_toRightOf="@id/Reply_Img"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
-                android:paddingLeft="5dp"
-                android:textColor="@color/black"
-                android:textSize="13dp"
+                android:layout_marginRight="6dp"
+                android:layout_marginLeft="16dp"
+                android:background="@null"
+                android:textColor="@color/Theme_Text_Color"
+                android:textSize="14dp"
+                android:fontFamily="@font/notosans_regular"
+                android:includeFontPadding="false"
                 android:layout_centerInParent="true"
                 android:layout_width="match_parent"
                 android:layout_height="40dp">
