--- a/app/src/main/res/layout/fragment_timepeed_post.xml
+++ b/app/src/main/res/layout/fragment_timepeed_post.xml
@@ -6,25 +6,20 @@
         </import>
         <variable
             name="timepeed_post_binding"
-            type="com.bigjeon.grumbling.fragments.Frament_TimePeed_Post" />
+            type="com.bigjeon.grumbling.fragments.Fragment_TimePeed_Post" />
     </data>
 <FrameLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
-    tools:context="com.bigjeon.grumbling.fragments.Frament_TimePeed_Post">
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/Timepeed_Post_Swipe_RefreshLayout"
-        android:layout_marginTop="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    tools:context="com.bigjeon.grumbling.fragments.Fragment_TimePeed_Post">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Timepeed_Post_RCV"
+        android:layout_marginTop="6dp"
         tools:listitem="@layout/timepeed_post_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </androidx.recyclerview.widget.RecyclerView>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </FrameLayout>
 </layout>
