--- a/app/src/main/res/layout/timepeed_post_item.xml
+++ b/app/src/main/res/layout/timepeed_post_item.xml
@@ -2,43 +2,31 @@
 <layout>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:layout_marginBottom="5dp"
+    android:layout_height="50dp"
+    android:layout_marginRight="6dp"
+    android:layout_marginLeft="6dp"
     android:background="@android:color/transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/Timepeed_Post_User_CIV"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_centerInParent="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="3dp"
-        android:src="@drawable/app_main_title"
-        app:civ_border_color="@color/purple_200"
-        app:civ_border_width="1dp">
+        app:civ_border_color="@color/Theme_Text_Color"
+        app:civ_border_width="0.5dp">
     </de.hdodenhof.circleimageview.CircleImageView>
     <TextView
         android:id="@+id/Timepeed_PostText"
-        android:text="좋아요를 눌렀습니다."
-        android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/Theme_Text_Color"
         android:textSize="12dp"
-        android:layout_marginLeft="7dp"
+        android:layout_marginLeft="6dp"
         android:layout_toRightOf="@+id/Timepeed_Post_User_CIV"
         android:layout_centerInParent="true"
+        android:fontFamily="@font/notosans_medium"
+        android:includeFontPadding="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-    </TextView>
-    <TextView
-        android:id="@+id/Timepeed_Post_Send_Time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="10dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:text="11111-111-11"
-        android:layout_marginRight="2dp"
-        android:layout_marginBottom="2dp">
     </TextView>
 </RelativeLayout>
 </layout>
